-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.13.0
-
3
-
9223372036854775807
Regular files inherit the Project Inherit flag in ldiskfs, zfs they do not.
Given the following commands:
mkdir proj lfs project -sp 1000 proj touch proj/test lfs project proj
ldiskfs output:
1000 P proj/test
ZFS 0.8.0 output:
1000 - proj/test
Both correctly set inherit on sub-directories.
This difference in behavior causes sanity-quota test_54 to fail for ZFS 0.8.0
https://testing.whamcloud.com/test_sets/afa8f438-81b8-11e9-869c-52540065bddc
- is blocking
-
LU-12336 Update ZFS Version to 0.8.2
-
- Resolved
-